fixed blurry images

--- a/style.css
+++ b/style.css
@@ -4,7 +4,15 @@
   height: 20vh;
   width: auto;
   cursor: pointer;
-  margin-right: -60px
+  margin-right: -60px;
+  position: relative;
+  transition: 0.3s;
+  backface-visibility: hidden;
+  transform: translateZ(0) scale(1, 1);
+}
+
+.cardImage:hover {
+  transform: translateY(-15px);
 }
 
 #player {
@@ -13,15 +21,7 @@
   grid-row: 2;
   width: 100%;
   height: 100%;
-}
-
-#player > div {
-  position: relative;
-  transition: 0.3s;
-}
-
-#player > div:hover {
-  transform: translateY(-15px);
+  transform: translateX(-30px);
 }
 
 .usedCardImage {
@@ -30,7 +30,6 @@
 }
 
 .nonClickable {
-  pointer-events: none;
   cursor: default;
 }
 
